manifests/thelounge/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: thelounge
  name: thelounge
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: thelounge
    spec:
      containers:
      - name: thelounge
        image: thelounge/thelounge:alpine
        volumeMounts:
        - mountPath: /var/opt/thelounge
          name: data
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 50m
            memory: 100Mi
      volumes:
      - name: data
        hostPath:
          path: /data/thelounge
          type: Directory
