manifests/thelounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: thelounge
  name: thelounge
  labels:
    service: thelounge
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    service: thelounge
