manifests/thelounge/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: thelounge
  name: thelounge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - lounge.yaakov.online
    secretName: lounge.yaakov.online
  rules:
  - host: lounge.yaakov.online
    http:
      paths:
      - path: /
        backend:
          serviceName: thelounge
          servicePort: 9000
